<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movie_details_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/avengers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ru.myfirstapp.myapplication.MovieDetailsActivity">

        <ImageView
            android:id="@+id/imageview_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_details_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:text="@string/movie_details_back"
            android:textColor="@color/gray"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:drawableTint="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/imageview_header"
            app:layout_constraintTop_toTopOf="@+id/imageview_header" />

        <TextView
            android:id="@+id/text_view_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/background_age"
            android:text="@string/age_13"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_title"
            app:layout_constraintStart_toStartOf="@id/text_title" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/movie_details_avengers_end_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageview_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageview_header"
            app:layout_constraintTop_toBottomOf="@+id/imageview_header" />

        <TextView
            android:id="@+id/text_view_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_action_adventure_fantasy"
            android:textColor="@color/pink_dark"
            app:layout_constraintBottom_toTopOf="@+id/rating_bar_movie_list"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintStart_toStartOf="@id/text_title"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <RatingBar
            android:id="@+id/rating_bar_movie_list"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:progressBackgroundTint="@color/gray"
            android:progressTint="@color/pink"
            android:rating="4"
            app:layout_constraintStart_toStartOf="@id/text_view_genre"
            app:layout_constraintTop_toBottomOf="@+id/text_view_genre" />

        <TextView
            android:id="@+id/text_view_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="@string/movie_details_125_reviews"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rating_bar_movie_list"
            app:layout_constraintStart_toEndOf="@+id/rating_bar_movie_list"
            app:layout_constraintTop_toBottomOf="@+id/text_view_genre"
            app:layout_constraintTop_toTopOf="@+id/rating_bar_movie_list" />

        <TextView
            android:id="@+id/text_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/movie_details_storyline"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_view_genre"
            app:layout_constraintStart_toStartOf="@id/rating_bar_movie_list"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar_movie_list" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/movie_details_description"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toEndOf="@+id/text_storyline"
            app:layout_constraintStart_toStartOf="@id/text_storyline"
            app:layout_constraintTop_toBottomOf="@+id/text_storyline" />

        <TextView
            android:id="@+id/text_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/movie_details_cast"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/text_description"
            app:layout_constraintTop_toBottomOf="@+id/text_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="109dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_cast" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>