<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movie_details_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_movies_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop = "55dp"
            android:layout_marginStart="16dp"
            android:text="@string/movies_list_title"
            app:drawableStartCompat="@drawable/ic_shape_movies_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:drawablePadding="8dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_film_avengers"
                android:layout_width="170dp"
                android:layout_height="296dp"
                android:background="#222232"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@id/textview_movies_list"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="14sp"
                android:layout_marginTop="27dp"/>

        <ImageView
            android:id="@+id/imageview_movies_list_avengers_end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_list_avengers_end_game"
            app:layout_constraintStart_toStartOf="@+id/item_film_avengers"
            app:layout_constraintTop_toTopOf="@id/item_film_avengers"
            app:layout_constraintEnd_toEndOf="@id/item_film_avengers" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_age"
            android:text="@string/age_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/imageview_movies_list_avengers_end_game"
            app:layout_constraintStart_toStartOf="@id/imageview_movies_list_avengers_end_game"
            android:layout_marginTop="12dp"
            android:layout_marginStart="6dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_like"
            app:layout_constraintTop_toTopOf="@id/item_film_avengers"
            app:layout_constraintEnd_toEndOf="@id/item_film_avengers"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:id="@+id/text_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/movie_details_action_adventure_drama"
            android:textColor="@color/pink_dark"
            app:layout_constraintStart_toStartOf="@id/movie_list_rating"
            app:layout_constraintBottom_toTopOf="@+id/movie_list_rating"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <RatingBar
            android:id="@+id/movie_list_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="10dp"
            android:numStars="5"
            android:progressBackgroundTint="@color/gray"
            android:progressTint="@color/pink"
            android:rating="4"
            app:layout_constraintStart_toStartOf="@id/imageview_movies_list_avengers_end_game"
            app:layout_constraintBottom_toBottomOf="@+id/imageview_movies_list_avengers_end_game"
            />

        <TextView
            android:id="@+id/text_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/movie_details_125_reviews"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/movie_list_rating"
            app:layout_constraintStart_toEndOf="@+id/movie_list_rating"
            app:layout_constraintTop_toBottomOf="@+id/text_genre"
            app:layout_constraintTop_toTopOf="@+id/movie_list_rating"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/movie_list_avengers_end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/movie_list_avengers_end_game"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="8sp"
            app:layout_constraintStart_toStartOf="@+id/item_film_avengers"
            app:layout_constraintTop_toBottomOf="@+id/imageview_movies_list_avengers_end_game" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="137 MIN"
            android:textSize="8sp"
            android:textColor="#565665"
            app:layout_constraintTop_toBottomOf="@id/movie_list_avengers_end_game"
            app:layout_constraintStart_toStartOf="@id/movie_list_avengers_end_game"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>